# api-build

./: Cargo.toml  LICENSE-MIT  NOTICE  README.md  protogen.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/prost-serde-build/: Cargo.toml
crates/prost-serde-build-examples/: Cargo.toml
crates/prost-serde-build-examples/src/: prost_serde.rs
crates/prost-serde-build/src/: lib.rs  prost-wkt-extern-paths.json
crates/prost-serde-build/src/templates/: index.rs.hbs  metadata.rs.hbs
crates/protogen-spec/: Cargo.toml
crates/protogen-spec/src/: lib.rs
crates/rust-build/: Cargo.toml
crates/rust-build/src/: main.rs  package_template.toml
crates/rust-build/src/templates/: build.rs.hbs
protos/appbiotic/prost_serde_build/examples/: examples.proto
