[package]
name = "appbiotic-prost-serde-build-examples"
version = "0.1.0"
edition = "2024"

[features]
default = ["prost-serde"]
prost-serde = [
    "dep:prost",
    "dep:prost-wkt",
    "dep:prost-wkt-types",
    "dep:serde",
    "dep:tonic",
]

[dependencies]
prost = { version = "0.13.5", optional = true }
prost-wkt = { version = "0.6.0", optional = true }
prost-wkt-types = { version = "0.6.0", optional = true }
serde = { version = "1.0.219", optional = true, features = ["std", "derive"] }
tonic = { version = "0.13.0", optional = true }

[dev-dependencies]
serde = { version = "1.0.219", features = ["std", "derive"] }
serde_json = { version = "1.0.140", features = ["std"] }

[build-dependencies]
anyhow = { version = "1.0.98", features = ["std"] }
appbiotic-api-protogen-spec = { path = "../protogen-spec" }
appbiotic-api-prost-serde-build = { path = "../prost-serde-build" }
serde_json = { version = "1.0.140", features = ["std"] }
