[package]
name = "appbiotic-api-rust-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "appbiotic-api-rust-build"
path = "src/main.rs"

[dependencies]
appbiotic-api-protogen-spec = { path = "../protogen-spec" }
anyhow = "1.0.98"
cargo_toml = "0.22.1"
clap = { version = "4.5.37", features = ["cargo", "derive"] }
fluent-uri = { version = "0.3.2", features = ["serde"] }
handlebars = "6.3.2"
serde = { version = "1.0.219", features = ["std", "derive"] }
serde_json = { version = "1.0.140", features = ["std"] }
tempfile = "3.19.1"
toml = "0.8.20"
